--- a/BookingManager/BookingManager.csproj
+++ b/BookingManager/BookingManager.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingManager.DAL\BookingManager.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
