--- a/BookingManager.DAL/BookingManager.DAL.csproj
+++ b/BookingManager.DAL/BookingManager.DAL.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingManager.Application\BookingManager.Application.csproj" />
+  </ItemGroup>
+
 </Project>
