correction exo email, Interfaces & mapping

--- a/BookingManager.MVC/appsettings.Development.json
+++ b/BookingManager.MVC/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Smtp": {
+    "Host": "DESKTOP-E563U3H",
+    "Port": 25,
+    "UserName": "naike",
+    "Password": "1234",
+    "Ssl": false
   }
 }
