--- a/BookingManager.MVC/appsettings.json
+++ b/BookingManager.MVC/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Smtp": {
+    "Host": "ssl0.ovh.net",
+    "Port": 587,
+    "UserName": "test@khunly.be",
+    "Password": "test1234=",
+    "Ssl": true
+  }
 }
