--- a/BookingManager.MVC/BookingManager.MVC.csproj
+++ b/BookingManager.MVC/BookingManager.MVC.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingManager.Application\BookingManager.Application.csproj" />
+    <ProjectReference Include="..\BookingManager.DAL\BookingManager.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
