ignore sensitive data

--- a/BookingManager.MVC/appsettings.json
+++ b/BookingManager.MVC/appsettings.json
@@ -6,5 +6,14 @@
     }
   },
   "AllowedHosts": "*",
- 
+  "Smtp": {
+    "Host": "ssl0.ovh.net",
+    "Port": 587,
+    "UserName": "test@khunly.be",
+    "Password": "test1234=",
+    "Ssl": true
+  },
+  "ConnectionStrings": {
+    "Main": "server=DESKTOP-E563U3H;database=hotel.db;integrated security=true;trustServerCertificate=true"
+  }
 }
